2022/General Skills/PW Crack 4 CTF/PW Crack 4
armstizzy-picoctf@webshell:~$ wget https://artifacts.picoctf.net/c/60/level4.py
--2023-03-09 04:39:50--  https://artifacts.picoctf.net/c/60/level4.py
Resolving artifacts.picoctf.net (artifacts.picoctf.net)... 108.156.172.74, 108.156.172.42, 108.156.172.120, ...
Connecting to artifacts.picoctf.net (artifacts.picoctf.net)|108.156.172.74|:443... connected.
HTTP request sent, awaiting response... 200 OK
Length: 2085 (2.0K) [application/octet-stream]
Saving to: 'level4.py'

level4.py                                                           100%[=================================================================================================================================================================>]   2.04K  --.-KB/s    in 0s      

2023-03-09 04:39:51 (708 MB/s) - 'level4.py' saved [2085/2085]

armstizzy-picoctf@webshell:~$ wget https://artifacts.picoctf.net/c/60/level4.flag.txt.enc
--2023-03-09 04:40:09--  https://artifacts.picoctf.net/c/60/level4.flag.txt.enc
Resolving artifacts.picoctf.net (artifacts.picoctf.net)... 108.156.172.120, 108.156.172.74, 108.156.172.6, ...
Connecting to artifacts.picoctf.net (artifacts.picoctf.net)|108.156.172.120|:443... connected.
HTTP request sent, awaiting response... 200 OK
Length: 33 [application/octet-stream]
Saving to: 'level4.flag.txt.enc'

level4.flag.txt.enc                                                 100%[=================================================================================================================================================================>]      33  --.-KB/s    in 0s      

2023-03-09 04:40:09 (655 KB/s) - 'level4.flag.txt.enc' saved [33/33]

armstizzy-picoctf@webshell:~$ wget https://artifacts.picoctf.net/c/60/level4.hash.bin
--2023-03-09 04:40:21--  https://artifacts.picoctf.net/c/60/level4.hash.bin
Resolving artifacts.picoctf.net (artifacts.picoctf.net)... 108.156.172.74, 108.156.172.42, 108.156.172.120, ...
Connecting to artifacts.picoctf.net (artifacts.picoctf.net)|108.156.172.74|:443... connected.
HTTP request sent, awaiting response... 200 OK
Length: 16 [application/octet-stream]
Saving to: 'level4.hash.bin'

level4.hash.bin                                                     100%[=================================================================================================================================================================>]      16  --.-KB/s    in 0s      

2023-03-09 04:40:21 (965 KB/s) - 'level4.hash.bin' saved [16/16]

armstizzy-picoctf@webshell:~$ cat level4.py
import hashlib

### THIS FUNCTION WILL NOT HELP YOU FIND THE FLAG --LT ########################
def str_xor(secret, key):
    #extend key to secret length
    new_key = key
    i = 0
    while len(new_key) < len(secret):
        new_key = new_key + key[i]
        i = (i + 1) % len(key)        
    return "".join([chr(ord(secret_c) ^ ord(new_key_c)) for (secret_c,new_key_c) in zip(secret,new_key)])
###############################################################################

flag_enc = open('level4.flag.txt.enc', 'rb').read()
correct_pw_hash = open('level4.hash.bin', 'rb').read()


def hash_pw(pw_str):
    pw_bytes = bytearray()
    pw_bytes.extend(pw_str.encode())
    m = hashlib.md5()
    m.update(pw_bytes)
    return m.digest()


def level_4_pw_check():
    user_pw = input("Please enter correct password for flag: ")
    user_pw_hash = hash_pw(user_pw)
    
    if( user_pw_hash == correct_pw_hash ):
        print("Welcome back... your flag, user:")
        decryption = str_xor(flag_enc.decode(), user_pw)
        print(decryption)
        return
    print("That password is incorrect")



level_4_pw_check()



# The strings below are 100 possibilities for the correct password. 
#   (Only 1 is correct)
pos_pw_list = ["8c86", "7692", "a519", "3e61", "7dd6", "8919", "aaea", "f34b", "d9a2", "39f7", "626b", "dc78", "2a98", "7a85", "cd15", "80fa", "8571", "2f8a", "2ca6", "7e6b", "9c52", "7423", "a42c", "7da0", "95ab", "7de8", "6537", "ba1e", "4fd4", "20a0", "8a28", "2801", "2c9a", "4eb1", "22a5", "c07b", "1f39", "72bd", "97e9", "affc", "4e41", "d039", "5d30", "d13f", "c264", "c8be", "2221", "37ea", "ca5f", "fa6b", "5ada", "607a", "e469", "5681", "e0a4", "60aa", "d8f8", "8f35", "9474", "be73", "ef80", "ea43", "9f9e", "77d7", "d766", "55a0", "dc2d", "a970", "df5d", "e747", "dc69", "cc89", "e59a", "4f68", "14ff", "7928", "36b9", "eac6", "5c87", "da48", "5c1d", "9f63", "8b30", "5534", "2434", "4a82", "d72c", "9b6b", "73c5", "1bcf", "c739", "6c31", "e138", "9e77", "ace1", "2ede", "32e0", "3694", "fc92", "a7e2"]

armstizzy-picoctf@webshell:~$ nano level4.py
armstizzy-picoctf@webshell:~$ python 3 level4.py
python: can't open file '/home/armstizzy-picoctf/3': [Errno 2] No such file or directory
armstizzy-picoctf@webshell:~$ python3 level4.py
  File "/home/armstizzy-picoctf/level4.py", line 28
    for x in pos_pw_list
                        ^
SyntaxError: expected ':'
armstizzy-picoctf@webshell:~$ nano level4.py
armstizzy-picoctf@webshell:~$ python3 level4.py
Welcome back... your flag, user:
picoCTF{fl45h_5pr1ng1ng_d770d48c}
